--- a/examples/gobot_formfilling_tutorial.ipynb
+++ b/examples/gobot_formfilling_tutorial.ipynb
@@ -19,7 +19,7 @@
         "id": "wUeGc-hrBwna"
       },
       "source": [
-        "# Introducing the form-filling mechanism in DeepPavlov's GO-Bot"
+        "# Introducing the form-filling mechanism in DeepPavlov Go-Bot Framework"
       ]
     },
     {
@@ -30,7 +30,7 @@
       "source": [
         "Form-filling is the task of collection some slots information from user.\r\n",
         "\r\n",
-        "## Form-filling configuration in DeepPavlov GO-Bot\r\n",
+        "## Form-filling configuration in DeepPavlov Go-Bot Framework\r\n",
         "Form filling takes parts in two config files: `domain` and `stories` configs. \r\n",
         "\r\n",
         "### `Domain.yml` configuration for formfilling\r\n",
@@ -681,7 +681,7 @@
         "id": "d8C8yuoiPTLv"
       },
       "source": [
-        "### Train the GO-Bot"
+        "### Train the Go-Bot"
       ]
     },
     {
