--- a/examples/gobot_formfilling_tutorial.ipynb
+++ b/examples/gobot_formfilling_tutorial.ipynb
@@ -19,7 +19,7 @@
         "id": "wUeGc-hrBwna"
       },
       "source": [
-        "# Introducing the form-filling mechanism in DeepPavlov Go-Bot Framework"
+        "# How Do I: Use Form-Filling in Go-Bot Skill with RASA DSLs (v1)"
       ]
     },
     {
@@ -30,7 +30,7 @@
       "source": [
         "Form-filling is the task of collection some slots information from user.\r\n",
         "\r\n",
-        "## Form-filling configuration in DeepPavlov Go-Bot Framework\r\n",
+        "## Form Filling In DeepPavlov Go-Bot Framework\r\n",
         "Form filling takes parts in two config files: `domain` and `stories` configs. \r\n",
         "\r\n",
         "### `Domain.yml` configuration for formfilling\r\n",
