--- a/examples/gobot_md_yaml_configs_tutorial.ipynb
+++ b/examples/gobot_md_yaml_configs_tutorial.ipynb
@@ -41,7 +41,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Use RASA DSL to Configure DeepPavlov's GO-Bot"
+        "# How Do I: Build Go-Bot Skill with RASA DSLs (v1)"
       ]
     },
     {
