--- a/examples/trippy_extended_tutorial.ipynb
+++ b/examples/trippy_extended_tutorial.ipynb
@@ -720,7 +720,7 @@
         "Below is a sketch for how the full TripPy model has been implemented in DeepPavlov:\n",
         "\n",
         "&nbsp;\n",
-        "![trippy_architecture.png](img/trippy_architecture.jpg)\n",
+        "![trippy_architecture.png](img/trippy_architecture.png)\n",
         "&nbsp;\n",
         "\n",
         "The above image also includes the input & input processing steps, while the previous sketch starts with the BERT Model (BERTForDST). \n",
