Clarify data parallelism setup

--- a/examples/trippy_extended_tutorial.ipynb
+++ b/examples/trippy_extended_tutorial.ipynb
@@ -832,13 +832,12 @@
       },
       "source": [
         "from deeppavlov import train_model\n",
-        "import time\n",
         "\n",
         "gobot_config['train']['batch_size'] = 4 # set batch size - Ideally use 8 & set lr to 1e-4 if your GPU allows\n",
         "gobot_config['train']['max_batches'] = 600 # maximum number of training batches\n",
-        "gobot_config['train']['val_every_n_batches'] = 40 # evaluate on full 'valid' split every 30 epochs\n",
-        "gobot_config['train']['log_every_n_batches'] = 40 # evaluate on full 'train' split every 5 batches\n",
-        "gobot_config['train']['validation_patience'] = 10 # evaluate on full 'valid' split every 30 epochs\n",
+        "gobot_config['train']['val_every_n_batches'] = 40 # evaluate on full 'valid' split every x epochs\n",
+        "gobot_config['train']['log_every_n_batches'] = 40 # evaluate on full 'train' split every x batches\n",
+        "gobot_config['train']['validation_patience'] = 10 # evaluate on full 'valid' split every x epochs\n",
         "gobot_config['train']['log_on_k_batches'] = 10 # How many batches to use for logging\n",
         "\n",
         "gobot_config['chainer']['pipe'][-1]['debug'] = False\n",
@@ -932,9 +931,10 @@
         "id": "1wZOqmYBTgYB"
       },
       "source": [
-        "With settings of `max_batches=800`, valid accuracy `= 0.5` and test accuracy is `~ 0.5`.\n",
+        "With settings of `max_batches=800`, valid accuracy `= 0.44` and test accuracy is `~ 0.45`.\n",
         "\n",
-        "Why is TripPy only as good as go-bot?\n",
+        "\n",
+        "If you have the compute, try training the model with a higher batch size, such as 8, or 16. The code automatically detects multiple GPUs and will run Data Parallelism. You will, however, need to upgrade the transformers huggingface version to 4.X and fix two transfomrer import statements in the TripPy code.\n",
         "\n"
       ]
     },
