Specify RASA version in demo

--- a/examples/gobot_md_yaml_configs_tutorial.ipynb
+++ b/examples/gobot_md_yaml_configs_tutorial.ipynb
@@ -2931,7 +2931,7 @@
         "outputId": "44ecd8d0-2767-45b5-9432-741f995a384f"
       },
       "source": [
-        "!pip install rasa\n",
+        "!pip install rasa==1.10.10\n",
         "!python -m spacy download en_core_web_md\n",
         "!python -m spacy link en_core_web_md en"
       ],
