--- a/examples/trippy_extended_tutorial.ipynb
+++ b/examples/trippy_extended_tutorial.ipynb
@@ -2195,7 +2195,7 @@
       "source": [
         "from deeppavlov.utils.telegram import interact_model_by_telegram\n",
         "\n",
-        "telegram_token = \"1932107798:AAGMkKp-n7CP90daP_3v8kg6AdCtGjEToSs\"\n",
+        "telegram_token = \"YOUR_TELEGRAM_TOKEN_HERE\"\n",
         "\n",
         "interact_model_by_telegram(model_config=gobot_config, token=telegram_token)"
       ],
