--- a/examples/trippy_extended_tutorial.ipynb
+++ b/examples/trippy_extended_tutorial.ipynb
@@ -811,10 +811,10 @@
       "cell_type": "code",
       "execution_count": 12,
       "source": [
-        "gobot_config['chainer']['pipe'][-1]['database'] = {\n",
-        "    'class_name': 'sqlite_database',\n",
-        "    'primary_keys': [\"name\"],\n",
-        "    'save_path': 'my_bot/db.sqlite'\n",
+        "gobot_config['chainer']['pipe'][-1]['database'] = {\r\n",
+        "    'class_name': 'sqlite_database',\r\n",
+        "    'primary_keys': [\"name\"],\r\n",
+        "    'save_path': 'my_bot/db.sqlite'\r\n",
         "}"
       ],
       "outputs": [],
@@ -835,7 +835,7 @@
       "cell_type": "code",
       "execution_count": 13,
       "source": [
-        "gobot_config['chainer']['pipe'][-1]['nlg_manager']['template_type'] = 'DefaultTemplate'\n",
+        "gobot_config['chainer']['pipe'][-1]['nlg_manager']['template_type'] = 'DefaultTemplate'\r\n",
         "gobot_config['chainer']['pipe'][-1]['nlg_manager']['template_path'] = 'my_data/simple-dstc2-templates.txt'"
       ],
       "outputs": [],
@@ -880,7 +880,7 @@
         "gobot_config['train']['log_on_k_batches'] = 10 # How many batches to use for logging\r\n",
         "\r\n",
         "gobot_config['chainer']['pipe'][-1]['debug'] = False\r\n",
-        "gobot_config['chainer']['pipe'][-1][\"optimizer_parameters\"] = {\"lr\": 1e-5, \"eps\": 1e-6}\r\n",
+        "gobot_config['chainer']['pipe'][-1][\"optimizer_parameters\"] = {\"lr\": 1e-4, \"eps\": 1e-6}\r\n",
         "\r\n",
         "train_model(gobot_config)"
       ],
@@ -958,8 +958,8 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "from deeppavlov import evaluate_model\n",
-        "\n",
+        "from deeppavlov import evaluate_model\r\n",
+        "\r\n",
         "evaluate_model(gobot_config);"
       ],
       "outputs": [],
@@ -993,8 +993,8 @@
       "cell_type": "code",
       "execution_count": 19,
       "source": [
-        "from deeppavlov import build_model\n",
-        "\n",
+        "from deeppavlov import build_model\r\n",
+        "\r\n",
         "bot = build_model(gobot_config)"
       ],
       "outputs": [
@@ -1337,7 +1337,7 @@
       "cell_type": "code",
       "execution_count": 20,
       "source": [
-        "bot.reset()\n",
+        "bot.reset()\r\n",
         "bot(['hi, i want to eat, can you suggest a place to go?'])"
       ],
       "outputs": [
