Update NER and SQuAD notebooks

--- a/docs/features/models/SQuAD.ipynb
+++ b/docs/features/models/SQuAD.ipynb
@@ -183,7 +183,7 @@
    },
    "outputs": [],
    "source": [
-    "!python -m deeppavlov install squad_torch_bert"
+    "!python -m deeppavlov install squad_bert"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "source": [
     "from deeppavlov import configs, build_model\n",
     "\n",
-    "model = build_model(configs.squad.squad_torch_bert, download=True)"
+    "model = build_model(configs.squad.squad_bert, download=True)"
    ]
   },
   {
@@ -302,7 +302,7 @@
    },
    "outputs": [],
    "source": [
-    "!python -m deeppavlov interact squad_torch_bert -d"
+    "!python -m deeppavlov interact squad_bert -d"
    ]
   },
   {
@@ -331,7 +331,7 @@
    },
    "outputs": [],
    "source": [
-    "!python -m deeppavlov predict squad_torch_bert -f <file-name>"
+    "!python -m deeppavlov predict squad_bert -f <file-name>"
    ]
   },
   {
@@ -403,7 +403,7 @@
     "from deeppavlov import configs, train_model\n",
     "from deeppavlov.core.commands.utils import parse_config\n",
     "\n",
-    "model_config = parse_config(configs.squad.squad_torch_bert)\n",
+    "model_config = parse_config(configs.squad.squad_bert)\n",
     "\n",
     "#  dataset that the model was trained on\n",
     "print(model_config['dataset_reader']['data_path'])"
@@ -550,7 +550,7 @@
    },
    "outputs": [],
    "source": [
-    "!python -m deeppavlov train squad_torch_bert"
+    "!python -m deeppavlov train squad_bert"
    ]
   },
   {
@@ -581,7 +581,7 @@
    "source": [
     "from deeppavlov import evaluate_model\n",
     "\n",
-    "model = evaluate_model(configs.squad.squad_torch_bert, download=True)"
+    "model = evaluate_model(configs.squad.squad_bert, download=True)"
    ]
   },
   {
@@ -601,7 +601,7 @@
    },
    "outputs": [],
    "source": [
-    "! python -m deeppavlov evaluate squad_torch_bert -d"
+    "! python -m deeppavlov evaluate squad_bert -d"
    ]
   },
   {
@@ -628,20 +628,20 @@
     "id": "6QHx_g25pBpy"
    },
    "source": [
-    "| Config name  | Dataset | Language | Model Size | F1 score |\n",
-    "| :--- | --- | --- | --- | ---: |\n",
-    "| [squad_torch_bert](https://github.com/deepmipt/DeepPavlov/blob/dev/deeppavlov/configs/squad/squad_torch_bert.json) | SQuAD | En | ? GB | ? |\n",
-    "| [multi_squad_noans](https://github.com/deepmipt/DeepPavlov/blob/dev/deeppavlov/configs/squad/multi_squad_noans.json) | SQuAD | Multi | ? GB | ? |\n",
-    "| [multi_squad_retr_noans](https://github.com/deepmipt/DeepPavlov/blob/dev/deeppavlov/configs/squad/multi_squad_retr_noans.json) | SQuAD | Multi | ? GB | ? |\n",
-    "| [squad_bert_multilingual_freezed_emb](https://github.com/deepmipt/DeepPavlov/blob/dev/deeppavlov/configs/squad/squad_bert_multilingual_freezed_emb.json) | SQuAD | Multi | ? GB | ? |\n",
-    "| [multi_squad_ru_retr_noans](https://github.com/deepmipt/DeepPavlov/blob/dev/deeppavlov/configs/squad/multi_squad_ru_retr_noans.json) | SQuAD | ? | ? GB | ? |\n",
-    "| [multi_squad_ru_retr_noans_rubert](https://github.com/deepmipt/DeepPavlov/blob/dev/deeppavlov/configs/squad/multi_squad_ru_retr_noans_rubert.json) | SQuAD | ? | ? GB | ? |\n",
-    "| [squad_ru_bert](https://github.com/deepmipt/DeepPavlov/blob/dev/deeppavlov/configs/squad/squad_ru_bert.json) | SQuAD | Ru | ? GB | ? |\n",
-    "| [squad_ru_convers_distilrubert_2L](https://github.com/deepmipt/DeepPavlov/blob/dev/deeppavlov/configs/squad/squad_ru_convers_distilrubert_2L.json) | SQuAD | Ru | ? GB | ? |\n",
-    "| [squad_ru_convers_distilrubert_6L](https://github.com/deepmipt/DeepPavlov/blob/dev/deeppavlov/configs/squad/squad_ru_convers_distilrubert_6L.json) | SQuAD | Ru | ? GB | ? |\n",
-    "| [squad_ru_rubert](https://github.com/deepmipt/DeepPavlov/blob/dev/deeppavlov/configs/squad/squad_ru_rubert.json) | SberQuAD | Ru | ? GB | ? |\n",
-    "| [squad_torch_bert](https://github.com/deepmipt/DeepPavlov/blob/dev/deeppavlov/configs/squad/squad_torch_bert.json) | SberQuAD | Ru | ? GB | ? |"
+    "| Config name  | Dataset | Language | Model Size | F1 score | EM  |\n",
+    "| :--- | --- | --- | --- | --- | ---: |\n",
+    "| squad_bert | SQuAD v1.1 | En | 1.3 GB | 88.86 | 81.49 |\n",
+    "| qa_squad2_bert | SQuAD v2.0 | En | 1.3 GB | 83.56 | 75.54 |\n",
+    "| qa_multisberquad_bert | MultiSQuAD | Multi | 2 GB | 80.76 | 63.81 |\n",
+    "| squad_ru_bert | SberQuAD | Ru | 2.0 GB | 84.71 | 66.21 |\n",
+    "| squad_ru_convers_distilrubert_2L | SberQuAD | Ru | 1.2 GB | 65.20 | 44.52 |\n",
+    "| squad_ru_convers_distilrubert_6L | SberQuAD | Ru | 1.6 GB | 80.57 | 61.54 | \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
