update: minor notebooks updates

--- a/docs/features/models/SQuAD.ipynb
+++ b/docs/features/models/SQuAD.ipynb
@@ -15,7 +15,7 @@
     "id": "sUXb756_pBpb"
    },
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/nastyachizhikova/doc_test/blob/main/source/notebooks/SQuAD.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/deeppavlov/DeepPavlov/blob/master/docs/features/models/SQuAD.ipynb)"
    ]
   },
   {
@@ -152,7 +152,7 @@
    },
    "source": [
     "First make sure you have the DeepPavlov Library installed.\n",
-    "[More info about the first installation](https://deeppavlov-test.readthedocs.io/en/latest/notebooks/Get%20Started%20with%20DeepPavlov.html)"
+    "[More info about the first installation](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
   },
   {
@@ -192,10 +192,10 @@
     "id": "i6hPLgzvpBpn"
    },
    "source": [
-    "`squad_torch_bert` here is the name of the model's *config_file*. [What is a Config File?](https://deeppavlov-test.readthedocs.io/en/latest/notebooks/Config%20File.html) \n",
+    "`squad_torch_bert` here is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
-    "The full list of the models with their config names can be found in the [table](#4.-Models-list)."
+    "The full list of the models with their config names can be found in the [table](#6.-Models-list)."
    ]
   },
   {
