--- a/docs/features/models/NER.ipynb
+++ b/docs/features/models/NER.ipynb
@@ -182,9 +182,9 @@
    },
    "outputs": [],
    "source": [
-    "from deeppavlov import configs, build_model\n",
+    "from deeppavlov import build_model\n",
     "\n",
-    "ner_model = build_model(configs.ner.ner_ontonotes_bert_torch, download=True)"
+    "ner_model = build_model('ner_ontonotes_bert_torch', download=True)"
    ]
   },
   {
@@ -306,7 +306,7 @@
    "source": [
     "from deeppavlov import evaluate_model\n",
     "\n",
-    "model = evaluate_model(configs.ner.ner_ontonotes_bert_torch, download=True)"
+    "model = evaluate_model('ner_ontonotes_bert_torch', download=True)"
    ]
   },
   {
@@ -386,10 +386,10 @@
     }
    ],
    "source": [
-    "from deeppavlov import configs, train_model\n",
+    "from deeppavlov import train_model\n",
     "from deeppavlov.core.commands.utils import parse_config\n",
     "\n",
-    "model_config = parse_config(configs.ner.ner_ontonotes_bert_torch)\n",
+    "model_config = parse_config('ner_ontonotes_bert_torch')\n",
     "\n",
     "#  dataset that the model was trained on\n",
     "print(model_config['dataset_reader']['data_path'])"
