--- a/docs/features/models/SQuAD.ipynb
+++ b/docs/features/models/SQuAD.ipynb
@@ -234,9 +234,9 @@
    },
    "outputs": [],
    "source": [
-    "from deeppavlov import configs, build_model\n",
+    "from deeppavlov import build_model\n",
     "\n",
-    "model = build_model(configs.squad.squad_bert, download=True)"
+    "model = build_model('squad_bert', download=True)"
    ]
   },
   {
@@ -400,10 +400,10 @@
     }
    ],
    "source": [
-    "from deeppavlov import configs, train_model\n",
+    "from deeppavlov import train_model\n",
     "from deeppavlov.core.commands.utils import parse_config\n",
     "\n",
-    "model_config = parse_config(configs.squad.squad_bert)\n",
+    "model_config = parse_config('squad_bert')\n",
     "\n",
     "#  dataset that the model was trained on\n",
     "print(model_config['dataset_reader']['data_path'])"
@@ -581,7 +581,7 @@
    "source": [
     "from deeppavlov import evaluate_model\n",
     "\n",
-    "model = evaluate_model(configs.squad.squad_bert, download=True)"
+    "model = evaluate_model('squad_bert', download=True)"
    ]
   },
   {
