--- a/docs/features/models/SQuAD.ipynb
+++ b/docs/features/models/SQuAD.ipynb
@@ -152,7 +152,7 @@
    },
    "source": [
     "First make sure you have the DeepPavlov Library installed.\n",
-    "[More info about the first installation](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
+    "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
   },
   {
@@ -192,7 +192,7 @@
     "id": "i6hPLgzvpBpn"
    },
    "source": [
-    "`squad_torch_bert` here is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
+    "`squad_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
     "The full list of the models with their config names can be found in the [table](#6.-Models-list)."
@@ -245,7 +245,7 @@
     "id": "ec572M3jpBpp"
    },
    "source": [
-    "**Input**: List[context, question]\n",
+    "**Input**: List[context], List[question]\n",
     "\n",
     "**Output**: List[answer, start_character, logit]"
    ]
@@ -291,7 +291,7 @@
     "id": "iE3j768spBps"
    },
    "source": [
-    "You can also get predictions in an interactive mode through CLI."
+    "You can also get predictions in an interactive mode through CLI (Command Line Interface)."
    ]
   },
   {
@@ -453,7 +453,7 @@
    "outputs": [],
    "source": [
     "# provide a path to the train file\n",
-    "model_config[\"dataset_reader\"][\"data_path\"] = \"/contents/train-v1.1.json\""
+    "model_config['dataset_reader']['data_path'] = '/contents/train-v1.1.json'"
    ]
   },
   {
