fix references in calssification and delete skills dir

--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -15,7 +15,14 @@
     "id": "ZMSY8bu6piql"
    },
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/deeppavlov/DeepPavlov/blob/master/docs/features/models/classification.ipynb)        [![Medium](https://img.shields.io/badge/Medium-12100E?style=for-the-badge&logo=medium&logoColor=white)](https://medium.com/deeppavlov/text-classification-using-deeppavlov-library-with-pytorch-and-transformers-f14db5528821)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/deeppavlov/DeepPavlov/blob/master/docs/features/models/classification.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Medium](https://img.shields.io/badge/Medium-12100E?style=for-the-badge&logo=medium&logoColor=white)](https://medium.com/deeppavlov/text-classification-using-deeppavlov-library-with-pytorch-and-transformers-f14db5528821)"
    ]
   },
   {
@@ -27,29 +34,24 @@
     "# Table of contents \n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
-    "\n",
     "2. [Get started with the model](#2.-Get-started-with-the-model)\n",
-    "\n",
     "3. [Use the model for prediction](#3.-Use-the-model-for-prediction)\n",
     "\n",
     "    3.1. [Predict using Python](#3.1-Predict-using-Python)\n",
-    "    \n",
+    "\n",
     "    3.2. [Predict using Python pipeline](#3.2-Predict-using-Python-pipeline)\n",
-    "    \n",
+    "\n",
     "    3.3. [Predict using CLI](#3.3-Predict-using-CLI)\n",
-    "     \n",
     "4. [Train the model on your data](#4.-Train-the-model-on-your-data)\n",
-    "    \n",
+    "   \n",
     "    4.1. [from Python](#4.1-Train-your-model-from-Python)\n",
-    "    \n",
+    "   \n",
     "    4.2. [from CLI](#4.2-Train-your-model-from-CLI)\n",
-    "    \n",
     "5. [Evaluate](#5.-Evaluate)\n",
     "    \n",
     "    5.1. [from Python](#5.1-Evaluate-from-Python)\n",
     "    \n",
     "    5.2. [from CLI](#5.2-Evaluate-from-CLI)\n",
-    "    \n",
     "6. [Models list](#6.-Models-list)"
    ]
   },
@@ -102,7 +104,7 @@
    },
    "source": [
     "First make sure you have the DeepPavlov Library installed.\n",
-    "[More info about the first installation.](https://deeppavlov-test.readthedocs.io/en/latest/notebooks/Get%20Started%20with%20DeepPavlov.html)"
+    "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
   },
   {
@@ -150,10 +152,10 @@
     "id": "a-DZVTP_piqy"
    },
    "source": [
-    "`insults_kaggle_bert` is the name of the model's *config_file*. [What is a Config File?](https://deeppavlov-test.readthedocs.io/en/latest/notebooks/Config%20File.html) \n",
+    "`insults_kaggle_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
-    "The full list of NER models with their config names can be found in the [table](#5.-Models-list)."
+    "The full list of NER models with their config names can be found in the [table](#6.-Models-list)."
    ]
   },
   {
@@ -181,7 +183,7 @@
     "id": "cLnbUke-9l_3"
    },
    "source": [
-    "After [installing](#2.-Get-started-with-the-model) the model, build it from the config and predict."
+    "After [model installation](#2.-Get-started-with-the-model) build it from the config and use it for prediction."
    ]
   },
   {
@@ -254,9 +256,9 @@
    },
    "outputs": [],
    "source": [
-    "from deeppavlov import configs, build_model\n",
+    "from deeppavlov import build_model\n",
     "\n",
-    "model = build_model(configs.classifiers.insults_kaggle_bert, download=True)"
+    "model = build_model('insults_kaggle_bert', download=True)"
    ]
   },
   {
@@ -309,7 +311,7 @@
     "id": "4gdBi_otpiq3"
    },
    "source": [
-    "You can also get predictions in an interactive mode through CLI."
+    "You can also get predictions in an interactive mode through CLI (Command Line Interface)."
    ]
   },
   {
@@ -380,7 +382,7 @@
    "source": [
     "from deeppavlov import evaluate_model\n",
     "\n",
-    "model = evaluate_model(configs.classifiers.insults_kaggle_bert, download=True)"
+    "model = evaluate_model('insults_kaggle_bert', download=True)"
    ]
   },
   {
@@ -631,9 +633,9 @@
     "id": "NOvddorSpirB"
    },
    "source": [
-    "| Config name  | Language | Task | Dataset | Model Size | Metric | Score |\n",
+    "| Config name  | Language | Task | Dataset | Model Size | Metric | Score \n",
     "| :--- | --- | --- | --- | --- | --- | ---: |\n",
-    "| [insults_kaggle_bert](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/insults_kaggle_bert.json) | En | Insults | [Insults](https://www.kaggle.com/c/detecting-insults-in-social-commentary) | 1.1 GB | ROC-AUC | 0.877  |\n",
+    "| [insults_kaggle_bert](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/insults_kaggle_bert.json) | En | Insults | [Insults](https://www.kaggle.com/c/detecting-insults-in-social-commentary) | 1.1 GB | ROC-AUC | 0.877 |\n",
     "| [paraphraser_rubert](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/paraphraser_rubert.json) | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 2.0 GB | F1 | 0.8738 |\n",
     "| [paraphraser_convers_distilrubert_2L](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/paraphraser_convers_distilrubert_2L.json) | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.2 GB | F1 | 0.7396 |\n",
     "| [paraphraser_convers_distilrubert_6L](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/paraphraser_convers_distilrubert_6L.json) | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.6 GB | F1 | 0.8354 |\n",
@@ -641,7 +643,7 @@
     "| [rusentiment_bert](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/rusentiment_bert.json) | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.3 GB | F1-weighted | 0.7005 |\n",
     "| [rusentiment_convers_bert](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/rusentiment_convers_bert.json) | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.5 GB | F1-weighted | 0.7724  |\n",
     "| [sentiment_twitter](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/sentiment_twitter.json) | Ru | Sentiment | [Twitter Mokoron](http://study.mokoron.com/) | 6.2 GB | F1-macro | 0.9961 |\n",
-    "| [topics_distilbert_base_uncased](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/topics_distilbert_base_uncased.json) | En | Topics | [DeepPavlov Topics](https://deeppavlov.ai/datasets/topics) | 6.2 GB | F1-macro | 0.9961 |"
+    "| [topics_distilbert_base_uncased](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/topics_distilbert_base_uncased.json) | En | Topics | [DeepPavlov Topics](https://deeppavlov.ai/datasets/topics) | 6.2 GB | F1-macro | 0.9961 |\n"
    ]
   },
   {
