fixes in classification doc page

--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -119,7 +119,7 @@
    },
    "outputs": [],
    "source": [
-    "! pip install --q deeppavlov"
+    "!pip install --q deeppavlov"
    ]
   },
   {
@@ -143,7 +143,7 @@
    },
    "outputs": [],
    "source": [
-    "! python -m deeppavlov install insults_kaggle_bert"
+    "!python -m deeppavlov install insults_kaggle_bert"
    ]
   },
   {
@@ -322,7 +322,7 @@
    },
    "outputs": [],
    "source": [
-    "! python deeppavlov interact insults_kaggle_bert -d"
+    "!python deeppavlov interact insults_kaggle_bert -d"
    ]
   },
   {
@@ -351,7 +351,7 @@
    },
    "outputs": [],
    "source": [
-    "! python deeppavlov predict insults_kaggle_bert -f <file-name>"
+    "!python deeppavlov predict insults_kaggle_bert -f <file-name>"
    ]
   },
   {
@@ -402,7 +402,7 @@
    },
    "outputs": [],
    "source": [
-    "! python -m deeppavlov evaluate insults_kaggle_bert -d"
+    "!python -m deeppavlov evaluate insults_kaggle_bert -d"
    ]
   },
   {
@@ -471,10 +471,10 @@
     }
    ],
    "source": [
-    "from deeppavlov import configs, train_model\n",
+    "from deeppavlov import train_model\n",
     "from deeppavlov.core.commands.utils import parse_config\n",
     "\n",
-    "model_config = parse_config(configs.classifiers.insults_kaggle_bert)\n",
+    "model_config = parse_config('insults_kaggle_bert')\n",
     "\n",
     "# dataset that the model was trained on\n",
     "print(model_config['dataset_reader']['data_path'])"
@@ -511,7 +511,7 @@
    "outputs": [],
    "source": [
     "# provide a path to the directory with your train, valid and test files\n",
-    "model_config['dataset_reader']['data_path'] = './contents/'"
+    "model_config['dataset_reader']['data_path'] = \"./contents/\""
    ]
   },
   {
@@ -606,7 +606,7 @@
    },
    "outputs": [],
    "source": [
-    "! python -m deeppavlov train model_config.json"
+    "!python -m deeppavlov train model_config.json"
    ]
   },
   {
@@ -633,9 +633,9 @@
     "id": "NOvddorSpirB"
    },
    "source": [
-    "| Config name  | Language | Task | Dataset | Model Size | Metric | Score \n",
+    "| Config name  | Language | Task | Dataset | Model Size | Metric | Score |\n",
     "| :--- | --- | --- | --- | --- | --- | ---: |\n",
-    "| [insults_kaggle_bert](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/insults_kaggle_bert.json) | En | Insults | [Insults](https://www.kaggle.com/c/detecting-insults-in-social-commentary) | 1.1 GB | ROC-AUC | 0.877 |\n",
+    "| [insults_kaggle_bert](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/insults_kaggle_bert.json) | En | Insults | [Insults](https://www.kaggle.com/c/detecting-insults-in-social-commentary) | 1.1 GB | ROC-AUC | 0.8770 |\n",
     "| [paraphraser_rubert](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/paraphraser_rubert.json) | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 2.0 GB | F1 | 0.8738 |\n",
     "| [paraphraser_convers_distilrubert_2L](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/paraphraser_convers_distilrubert_2L.json) | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.2 GB | F1 | 0.7396 |\n",
     "| [paraphraser_convers_distilrubert_6L](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/paraphraser_convers_distilrubert_6L.json) | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.6 GB | F1 | 0.8354 |\n",
