fix classification table of contents

--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -39,19 +39,17 @@
     "\n",
     "    3.1. [Predict using Python](#3.1-Predict-using-Python)\n",
     "\n",
-    "    3.2. [Predict using Python pipeline](#3.2-Predict-using-Python-pipeline)\n",
-    "\n",
-    "    3.3. [Predict using CLI](#3.3-Predict-using-CLI)\n",
-    "4. [Train the model on your data](#4.-Train-the-model-on-your-data)\n",
-    "   \n",
-    "    4.1. [from Python](#4.1-Train-your-model-from-Python)\n",
-    "   \n",
-    "    4.2. [from CLI](#4.2-Train-your-model-from-CLI)\n",
-    "5. [Evaluate](#5.-Evaluate)\n",
+    "    3.2. [Predict using CLI](#3.2-Predict-using-CLI)\n",
+    "4. [Evaluation](#4.-Evaluation)\n",
     "    \n",
-    "    5.1. [from Python](#5.1-Evaluate-from-Python)\n",
+    "    4.1. [from Python](#4.1-Evaluate-from-Python)\n",
     "    \n",
-    "    5.2. [from CLI](#5.2-Evaluate-from-CLI)\n",
+    "    4.2. [from CLI](#4.2-Evaluate-from-CLI)\n",
+    "5. [Train the model on your data](#5.-Train-the-model-on-your-data)\n",
+    "   \n",
+    "    5.1. [from Python](#5.1-Train-your-model-from-Python)\n",
+    "   \n",
+    "    5.2. [from CLI](#5.2-Train-your-model-from-CLI)\n",
     "6. [Models list](#6.-Models-list)"
    ]
   },
@@ -391,7 +389,7 @@
     "id": "JoeJFY7Q8HpM"
    },
    "source": [
-    "## 4.1 Evaluate from CLI"
+    "## 4.2 Evaluate from CLI"
    ]
   },
   {
