refactor: classification.ipynb optimization

--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -190,64 +190,7 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 1000,
-     "referenced_widgets": [
-      "5001d4dd9ba94aa9a8fb1caebfdd0119",
-      "e5457c157a7b4d6c91247a4ea3aa38b6",
-      "5b7794057a16448fa6968b5f05958425",
-      "e6e18c33ef964484970c945e8b1b9fba",
-      "f555c2e6343c46ee8c52032ba817f048",
-      "55f051f2fa8f4d808e01a8e2b0a7b5a8",
-      "8ecd1f909310434dba164715642311a1",
-      "0a4e02bcc3674e0f8dfce9ccd62b4c6b",
-      "f06e82af071342d2a895cbdd0258680b",
-      "e48d8612cfe84ae39b7e572671b86714",
-      "38e3974a100f4ceaa7f68d45b0eb15fb",
-      "06fcfc25b99246f899abe19d47c4aa88",
-      "88446211de7343608045b48a995e5603",
-      "d6f68940103246e7b873bcb576d6b66e",
-      "b1d2069359b04f0f9e37315b7368adbe",
-      "0babc3868e214e5596b2ece79f4ffead",
-      "db799a8e966e4bd4a1c6e74c01065d8b",
-      "43b1690ba3cd42d1a47653ca96f69d59",
-      "ec773142e84941a3ab9240e21667ae7c",
-      "6eaa4341f10946cc8431fa50a1c26ec6",
-      "1854c5e52b6f4790a179e8d475b59c66",
-      "5ade470927964313aec2b733724a17fa",
-      "2211237e0fe94b5ba03ac5acd3132ca1",
-      "09339f0cb4b94881be7274a36d2d5b76",
-      "bc54730273e64939a42d6f2f8a884be2",
-      "771e5e73d08a4d5bad0e741a1af24d12",
-      "0a1a5c29d3654a85ab75b5a84934e8ae",
-      "bc3ac1774e16485291d32600e44eae10",
-      "e5f1f2943a7444ad8b8c04b6e16cbe0c",
-      "01a7a186b7cc4f3a9e915eb75aa46fb2",
-      "4c104f2d2cbf46a78aa4ec6aede1b985",
-      "bd1c59c2f2334a5e9552c7c97e4c0df1",
-      "15ad572c70fb4be184eb7dfbf6b4fa9a",
-      "229d4ac2841546e6b99a47d5f5422db5",
-      "3cfde0873b7d471383d1d876de0214d8",
-      "8fda213e92944a15913af4618f45c5e9",
-      "02380345fee34a0f9f54d64844cce4b2",
-      "76241065d43c4e2faa17ecd8a2c107a6",
-      "35d5b245af7f41fa9dc258920814f09c",
-      "c2bf9b9810ab48ea88fbdde3fe9de7e7",
-      "a4f7ef3916eb464a9efbfdc676fa6341",
-      "ec0fb58198ab447c9209b5431282927c",
-      "0429d0b3bbe1433fa34c7de624df09d5",
-      "9da3bce061e44da6b7efe9025c61c864",
-      "11df4206ee7a4e28a8c4a2d2bc8da36c",
-      "372fe5c1f3f34756bcb2ae68625c3a6c",
-      "f1733d2d57ea43a6a53f2a04a954b170",
-      "a196c7d3256a491991ab52fbb141fa31",
-      "9362b2736cd14fbc9f1dd347863e0529",
-      "2ca966de438e499d94c0049749d4592e",
-      "715ed98b587e4258a9df6156a97be8ee",
-      "412dba85387c49fb81d4fee6c56c6335",
-      "f5102d7020d9449180ccb4889798080f",
-      "7ed6b514c8284010a922c2bba2d822a5",
-      "53949616066141768dcedd051138e301"
-     ]
+     "height": 1000
     },
     "id": "fnHw4a6C9l_4",
     "outputId": "258d5da3-e7a5-4cb4-a5e1-70af3f726beb"
@@ -643,37 +586,10 @@
     "| [rusentiment_convers_bert](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/rusentiment_convers_bert.json) | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.5 GB | F1-weighted | 0.7724  |\n",
     "| [topics_distilbert_base_uncased](https://github.com/deeppavlov/DeepPavlov/blob/master/deeppavlov/configs/classifiers/topics_distilbert_base_uncased.json) | En | Topics | [DeepPavlov Topics](https://deeppavlov.ai/datasets/topics) | 6.2 GB | F1-macro | 0.9961 |\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
-    "accelerator": "GPU",
-    "colab": {
-     "collapsed_sections": [],
-     "name": "NER.ipynb",
-     "provenance": []
-    },
-    "kernelspec": {
-     "display_name": "Python 3.8.10 ('.venv': venv)",
-     "language": "python",
-     "name": "python3"
-    },
-    "language_info": {
-     "codemirror_mode": {
-      "name": "ipython",
-      "version": 3
-     },
-     "file_extension": ".py",
-     "mimetype": "text/x-python",
-     "name": "python",
-     "nbconvert_exporter": "python",
-     "pygments_lexer": "ipython3",
-     "version": "3.8.10"
-    }
+    "accelerator": "GPU"
    },
    "nbformat": 4,
    "nbformat_minor": 4
